/* د ويټامين اې سرچينه */

--- a/ويټامين_اې.mw
+++ b/ويټامين_اې.mw
@@ -33,9 +33,9 @@
 *[[winter squash]]
 </div>
 
-يادونه: هغه ګڼ چې په ليندکيو کې کښل شوی هغه په هر ۱۰۰ ګرامو کې د رېټانول کچه او په يوه بالغه نارينه کې يې د سلنې کچه هغه کچه ښکاره کوي چې د غذايي کارپوهانو لخوا يې په هر سپارښتنه شوې. 
+يادونه: هغه ګڼ چې په ليندکيو کې کښل شوی هغه په هر ۱۰۰ ګرامو کې د رېټانول کچه او د ويټامين اې د سلنې هغه کچه ښودل شوې چې غذايي کارپوهان يې يوه بالغه نارينه ته سپارښتنه کوي. 
 
-Conversion of carotene to retinol varies from person to person and bioavailability of carotene in food varies.<ref>{{cite journal |author=Borel P, Drai J, Faure H, ''et al'' |title=[Recent knowledge about intestinal absorption and cleavage of carotenoids] |language=French |journal=Ann. Biol. Clin. (Paris) |volume=63 |issue=2 |pages=165–77 |year=2005 |pmid=15771974 |doi=}}</ref><ref>{{cite journal |author=Tang G, Qin J, Dolnikowski GG, Russell RM, Grusak MA |title=Spinach or carrots can supply significant amounts of vitamin A as assessed by feeding with intrinsically deuterated vegetables |journal=Am. J. Clin. Nutr. |volume=82 |issue=4 |pages=821–8 |year=2005 |pmid=16210712 |doi=}}</ref>
+خو د کاروټين او رېټانول دغه کچې له يوه وګړي نه تر بل وګړي پورې د هغوی د ژونپوهنيزې بېلابېلوالي په سبب او د خوړو د بېلابېلوالي په سبب توپير يو له بل سره توپير لري.<ref>{{cite journal |author=Borel P, Drai J, Faure H, ''et al'' |title=[Recent knowledge about intestinal absorption and cleavage of carotenoids] |language=French |journal=Ann. Biol. Clin. (Paris) |volume=63 |issue=2 |pages=165–77 |year=2005 |pmid=15771974 |doi=}}</ref><ref>{{cite journal |author=Tang G, Qin J, Dolnikowski GG, Russell RM, Grusak MA |title=Spinach or carrots can supply significant amounts of vitamin A as assessed by feeding with intrinsically deuterated vegetables |journal=Am. J. Clin. Nutr. |volume=82 |issue=4 |pages=821–8 |year=2005 |pmid=16210712 |doi=}}</ref>
 
 == سرچينې ==
 {{Reflist}}
