/* د ويټامين اې سرچينه */

--- a/ويټامين_اې.mw
+++ b/ويټامين_اې.mw
@@ -30,7 +30,7 @@
 *[[آم]] (38 μg 4%)
 *[[نخود]] (38 μg 4%)
 *[[براکولي]] (31 μg 3%)
-*[[winter squash]]
+*[[تورايي]]
 </div>
 
 يادونه: هغه ګڼ چې په ليندکيو کې کښل شوی هغه په هر ۱۰۰ ګرامو کې د رېټانول کچه او د ويټامين اې د سلنې هغه کچه ښودل شوې چې غذايي کارپوهان يې يوه بالغه نارينه ته سپارښتنه کوي. 
