/* د ويټامين اې سرچينه */

--- a/ويټامين_اې.mw
+++ b/ويټامين_اې.mw
@@ -23,7 +23,7 @@
 *[[سابه]]
 *'''[[کدو]]''' (369 μg 41%)
 *'''[[collard greens]]''' (333 μg 37%)
-*'''[[cantaloupe melon]]''' (169 μg 19%)
+*'''[[کانټالوپ خټکی]]''' (169 μg 19%)
 *[[هګۍ (خواړه)|هګۍ]] (140 μg 16%)
 *[[خُرماڼۍ]] (96 μg 11%)
 *[[پپايا]] (55 μg 6%)
