--- a/ويټامين_اې.mw
+++ b/ويټامين_اې.mw
@@ -13,7 +13,7 @@
 
 ==د ويټامين اې سرچينه==
 ويټامين اې په طبيعي ډول په ګڼ شمېر خوړو کې موندل کېږي:
-*'''[[ځيګر]] (د غوايي غوښته، د چرګ غوښه، د شونډکيز چرګ غوښه، د کب غوښه)''' (6500 μg  	722%)
+*'''[[ځيګر]] (د غوايي غوښه، د چرګ غوښه، د شونډکيز چرګ غوښه، د کب غوښه)''' (6500 μg  	722%)
 *'''[[ګازرې]]''' (835 μg 93%)
 *'''[[براکولي|د براکولي پاڼې]]''' (800 μg 89%) - Acc. to [http://www.nal.usda.gov/fnic/foodcomp/search/ د USDA توکبنسټ]. د براکولي ګل بيا د براکولي د پاڼو په پرتله په لږه کچه ويټامين اې لري - دا يادښت وګورۍ<ref>The RAE value in the USDA data for broccoli leaves is similar to the IU value for broccoli florets, which implies rather improbably that the leaves have about 20 times as much beta-carotene. It is possible that there was an error in the table.<!--This is not "original research"! I could just put a {{verify credibility}} tag on this, but I thought it would be better to specify why it seems incredible. If you think the value of 800 μg is good, let's discuss it on the talk page. --></ref>.
 *'''[[خواږه کچالو]]''' (709 μg 79%)
