--- a/انټر_سرويس_انټېلېجنس.mw
+++ b/انټر_سرويس_انټېلېجنس.mw
@@ -243,7 +243,7 @@ Some members of the American media and political establishment have questioned P
 *''[[Black Friday]]'', a [[Bollywood]] movie which cronicles the events the [[1993 Mumbai bombings]] and the ISI's role in instigating and supporting the chain of events.
 
 ==يادښتونه==
-{{reflist|2}}
+{{reflist}}
 ISI is accused by India alot of times but its involvement has never been proved  which shows that its just a blame game.
 
 ==نورې لوستنې==
