--- a/انټر_سرويس_انټېلېجنس.mw
+++ b/انټر_سرويس_انټېلېجنس.mw
@@ -40,7 +40,7 @@
 آی اېس آی له خپل جوړښته راپه دېخوا د نړۍ له ډېرو استخباراتي ادارو سره ټېنګې اړیکې لري چې د یادولو وړ یې (CIA)سي آی اې، د انګلستان  (MI6)اېم آی شپږ او د اسرایئلو (MOSSAD) موساد دی .   که څه هم چې آی اېس آی د ډېرو نورو استخباراتي ادارو، د ملګرو ملتونو ډېرو ادارو او همدارانګه د ډېرو خبري رسنیو په لاسوندونو یوه ترهګره اداره ده.
 
 == تګلاره==
-د آی اېس آی رسمي موخې یې په لاندې ډول دي:
+د آی اېس آی رسمي موخې په لاندې ډول دي:
 
 #د ملي امنیت ټینګښت او د ملک د ننه او په بهر کې  د پاکستان د ګټو خوندیتوب
 #په ګاوندیو ملکونو، په تېره افغانستان او هند کې د سیاسي او نظامي خوځښتونو او بهیرونو څارنه چې د پاکستان په ملي امنیت او د دوی په بهرنۍ پالیسي یا تګلاره باندې پوره پوره اغېزه لرلای شي . 
