--- a/انټر_سرويس_انټېلېجنس.mw
+++ b/انټر_سرويس_انټېلېجنس.mw
@@ -159,7 +159,7 @@ After the initial phase, the recruit is sent to the Inter-Services Intelligence 
 
 *'''(۱۹۹۴)''' The Taliban regime that the ISI supported after ۱۹۹۴ to suppress warlord fighting and in hopes of bringing stability to Afghanistan proved [[Taliban#Life under the Taliban regime|too rigid]] in its Islamic interpretations and too fond of the [[Al-Qaeda]] based on its soil. Despite receiving large sums of aid from Pakistan, the Taliban leader [[Mohammed Omar|Mullah Omar]] is reported to have insulted a visiting delegation of Saudi Prince Sultan and an ISI general asking that the Taliban turn over bin Laden to Saudi Arabia.<ref>Rashid, Ahmed, ''Taliban: Militant Islam, Oil, and Fundamentalism in Central Asia''. Yale University Press, (۲۰۰۰), p.۱۳۸, ۲۳۱ </ref> Following the ۹/۱۱ attack on the United States by Al-Qaeda, Pakistan felt it necessary to cooperate with the US and the [[United Islamic Front for the Salvation of Afghanistan|Northern Alliance]] in a [[War in Afghanistan (۲۰۰۱–present)|war]] against the Taliban.
 
-*'''(۲۰۰۱)''' ISI expels [[Hamid Karzai]] from his residence in exile in Pakistan for opposing the [[Taliban]].<ref>[[Ghost Wars]], p. ۵۷۲</ref>
+*'''(۲۰۰۱)''' په دغه کال آی اېس آی [[حامد کرزی]] له پاکستان نه شړي او دا په دې تور چې هغه د طالبانو مخالفت کاوه.<ref>[[Ghost Wars]], p. ۵۷۲</ref>
 
 ====بنګله دېش====
 *'''(۱۹۷۰ کالونه)''' آی اېس آی په دې چار کې پاتې راغی چې [[هندوستان]] د [[ختيځ پاکستان]] د ملاتړ څخه لاس په سر شي، کوم چې د [[بنګله دېش]] د جوړولو سبب وګرځېده.
