--- a/اشرف_غني.mw
+++ b/اشرف_غني.mw
@@ -88,7 +88,7 @@
 [[وېشنيزه:پښتانه سياستوال]]
 [[وېشنيزه:پښتانه]]
 [[وېشنيزه:د ولسمشرۍ کانديدان]]
-[[وېشنيزه:پښتانه ليکوالان]]
+[[وېشنيزه:پښتانه ليکوال]]
 
 [[en:Ashraf Ghani]]
 [[pl:Ashraf Ghani]]
