--- a/پیرو.mw
+++ b/پیرو.mw
@@ -838,7 +838,7 @@ The most popular soft drink is called [[Inca Kola]], which is a yellowish cream 
 [[ur:پیرو]]
 [[uz:Peru]]
 [[vec:Perù]]
-[[vi:Peru]]
+[[vi:Perú]]
 [[vo:Peruvän]]
 [[wo:Peru]]
 [[wuu:秘鲁]]
