*Empty MediaWiki Message*

--- a/خروشتهي_ليکدود.mw
+++ b/خروشتهي_ليکدود.mw
@@ -1,4 +1,4 @@
-<font face="Tahoma">په افغانستان کي يوشمير داسي کتېبې او ډبر ليکونه شته چي لا تر اوسه په بشپړه توګه نه دي لوستل شوي  ،  د بيلګو په توګه په لغمان ولايت کي  اليشنګ کتېبه ، د هزار سم څخه تر لاسه شوي يوشمير ليکبڼي او نور يادولای شو ، خو د لرغونو زمانو داسي کتيبې ، ډبر ليکونه او د ليک بڼي هم شته چي په اړه يې  يوشمير بهرنيو او کورنيو پوهانو  زيار ګاللئ او د پوهېدو وړيې ګرځولي دي  .  د دې  ډلې ليکبڼو څخه يو هم  خروشتهي [[ليکدود]] دئ چي  ٣٠٠ کاله پخوا تر مېلاد منځ ته راغلۍ او تر ٥٠٠  ميلادي کلونو دود و.   دا [[ليکدود]] چي د خپل مهال په تاريخي پېښو د پوهېدلو  ګټور او ارزښتمن لاسوند ونه  لري ، د زيات شمير څيړونکو د پام وړ کرځېدلئ او په اړه يې څيړني کړيدي .  په دې  ليکنه کي هڅه شوې چي دخروشتهي [[ليکدود]] په اړه درې پوښتني  په لنډه توګه ځواب شي . 
+په افغانستان کي يوشمير داسي کتېبې او ډبر ليکونه شته چي لا تر اوسه په بشپړه توګه نه دي لوستل شوي  ،  د بيلګو په توګه په لغمان ولايت کي  اليشنګ کتېبه ، د هزار سم څخه تر لاسه شوي يوشمير ليکبڼي او نور يادولای شو ، خو د لرغونو زمانو داسي کتيبې ، ډبر ليکونه او د ليک بڼي هم شته چي په اړه يې  يوشمير بهرنيو او کورنيو پوهانو  زيار ګاللئ او د پوهېدو وړيې ګرځولي دي  .  د دې  ډلې ليکبڼو څخه يو هم  خروشتهي [[ليکدود]] دئ چي  ٣٠٠ کاله پخوا تر مېلاد منځ ته راغلۍ او تر ٥٠٠  ميلادي کلونو دود و.   دا [[ليکدود]] چي د خپل مهال په تاريخي پېښو د پوهېدلو  ګټور او ارزښتمن لاسوند ونه  لري ، د زيات شمير څيړونکو د پام وړ کرځېدلئ او په اړه يې څيړني کړيدي .  په دې  ليکنه کي هڅه شوې چي دخروشتهي [[ليکدود]] په اړه درې پوښتني  په لنډه توګه ځواب شي . 
 لومړۍ دا چي خروشتهي  [[ليکدود]] چيري پيدا شوۍ ، د ترويج او تعميم سيمې يې کومي دي  ؟ دوهمه پوښتنه دا چي د ا يوازي [[ليکدود]] و او که ژبه هم وه ، که يوازي [[ليکدود]] و نو د کومو ژبو  ليکبڼه ده ؟ او دريم دا چي د لوستلو لپاره يې چا زيار ګاللئ او د کومو معيارونو پر بنسټ يې د دې [[ليکدود]] اوازونه پېداکړيدي ؟
 
 == تاريخ ==
