*Empty MediaWiki Message*

--- a/غازي_شېر_محمد_خان.mw
+++ b/غازي_شېر_محمد_خان.mw
@@ -1,4 +1,4 @@
-'''غازي شېر محمد خان''' د محمد رسول خان زوی د بخشي صاحب لمسي چې پر (١٢٠٨) ل.ق کې د غزني ولايت د قره باغ دولسوالۍ په يوه دينداره او متدينه کورنۍ کې زيږيدلی دی. پلاريې محمدرسول خان دځوانۍ په عمر کې له دې ًٌُِفاني دنيا څخه سترګې پټې کړې. د غازي شېرمحمدخان سرپرستي او پالنه دده پياوړي نيکه (بخشي صاحب) په ښه توګه سرته رسولې چې په نتيجه کې يې دځان په وړ يو باغيرته او دوطن په آزادۍ مين شخصيت خپلې ټولنې ته وړاندې کړ.
+'''غازي شېر محمد خان''' د محمد رسول خان زوی د بخشي صاحب لمسي چې پر (١٢٠٨) ل.ق کې د غزني ولايت د قره باغ دولسوالۍ په يوه دينداره او متدينه کورنۍ کې زيږيدلی دی. پلاريې محمدرسول خان دځوانۍ په عمر کې له دې ًفاني دنيا څخه سترګې پټې کړې. د غازي شېرمحمدخان سرپرستي او پالنه دده پياوړي نيکه (بخشي صاحب) په ښه توګه سرته رسولې چې په نتيجه کې يې دځان په وړ يو باغيرته او دوطن په آزادۍ مين شخصيت خپلې ټولنې ته وړاندې کړ.
 ښاغلی بخشي صاحب د قوم مشر او خدمتګار و، دوطن پر آزادۍ مين، په عقل رسيدلی سړی و.
 دخپل چاپيريال او خلکو روحيه او آزادي يې ډېره ښه ساتلې، وه. دوطن د دښمنانو د ښکاره او پټو دسيسو پر وړاندې يې خپل خلک ښه پو هولي وو.
 دانګريز د هر ډول تجاوز د مخنيوي په هکله ډېر فعال و. انګريزان هم دده له دښمنۍ څخه په ويره کې وو کله چې انګريزانو د دوی داوسيدو دځای پته ځان ته ولګوله ډير ژر يې محاصره کړوتر څو ورځو جنګ او محاصرې وروسته جنګي تاکتيک څخه په استفادې سره يې له انګريزانو سره موقتي اور بند وکړ.v کله چې شاه شجاع پاچا شو او مکناتن د خپلو دسېسو تارونه هرې خواته وغزول چې په نتيجه کې يې ښاغلی بخشي صاحب سره له څو ملګرو په شهادت ورساوه.
