robot  Modifying: [[hr:Bubreg]]

--- a/پښتورکي.mw
+++ b/پښتورکي.mw
@@ -59,7 +59,7 @@ The kidneys receive unfiltered blood directly from the heart through the [[abdom
 [[fr:Rein]]
 [[gl:Ril]]
 [[he:כליה]]
-[[hr:Bubrezi]]
+[[hr:Bubreg]]
 [[hu:Vese]]
 [[id:Ginjal]]
 [[is:Nýra]]
