--- a/کانګو_دموکراتیک_جمهوریت.mw
+++ b/کانګو_دموکراتیک_جمهوریت.mw
@@ -159,7 +159,7 @@ The economy is a mixture of village agriculture and handicrafts, an industrial s
 [[an:Republica d'o Congo]]
 [[ar:جمهورية الكونغو]]
 [[ast:Congo]]
-[[az:Konqo]]
+[[az:Konqo Respublikası]]
 [[bat-smg:Kuongs]]
 [[be-x-old:Рэспубліка Конґа]]
 [[bg:Република Конго]]
