--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -51,7 +51,7 @@
 === د اسلامي غورځنګ جوړېدنه ===
 د بشپړې لیکنې لپاره ''[[د افغانستان اسلامي حزب]]'' وګورﺉ 
 
-مسلمان زده كړيال غمجن اولالهانده ول، له يوېخوا په پوهنتون كې كمونستانو خپله ولكه ورځ ترورځې ټينګوله، او د غېر اسلامي سياسي ډلو ورځ په ورځ خورېدونكو هځو په ديني شعائرو د كمونستانو بېباكانه تېري ځورول، له  بلې خوا د يوه اسلامي غورځنګ نشتوالي |ځورول. په پوهنتون كې چا ملي جامه نشوه اغوستلې، ږيره پرېښودل نه ؤ، په هغه چا به ټوكې او مسخرې وهل كېدې چاچې به ږيره يا پګړۍ په سر كړې وه.
+ له يوېخوا په پوهنتون كې كمونستانو خپله ولكه ورځ ترورځې ټينګوله، او د غېر اسلامي سياسي ډلو ورځ په ورځ خورېدونكو هځو په ديني شعائرو د كمونستانو بېباكانه تېري ځورول، له  بلې خوا د يوه اسلامي غورځنګ نشتوالي |ځورول. په پوهنتون كې چا ملي جامه نشوه اغوستلې، ږيره پرېښودل نه ؤ، په هغه چا به ټوكې او مسخرې وهل كېدې چاچې به ږيره يا پګړۍ په سر كړې وه.
 پدې وخت  كې په دين او وطن مېن ځينو ځوانان د لومړي ځل لپاره د لمانځه لپاره له پوهنتون څخه د لمانځه ځاى وغوښت، چې له ډېر كړاو څخه ورته د لېليې ۳ېم پوړ خالي كړاى شو، چېرې چې به مخكې لدې كنسرتونه او نڅاګانې كېدلې.
 د لمانځه ځاى د اسلامي غورځنګ لپاره د بنسټيزه خښتې په څېر ؤ چېرې چې مسلمان ځوانانو يوبل سره وپېژندل. 
 
