/* د اسلامي غورځنګ جوړېدنه */

--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -55,8 +55,8 @@
 پدې وخت  كې په دين او وطن مېن ځينو ځوانان د لومړي ځل لپاره د لمانځه لپاره له پوهنتون څخه د لمانځه ځاى وغوښت، چې له ډېر كړاو څخه ورته د لېليې ۳ېم پوړ خالي كړاى شو، چېرې چې به مخكې لدې كنسرتونه او نڅاګانې كېدلې.
 د لمانځه ځاى د اسلامي غورځنګ لپاره د بنسټيزه خښتې په څېر ؤ چېرې چې مسلمان ځوانانو يوبل سره وپېژندل. 
 
-حكمتيار له هغو كسانو څخه ؤ چا چې په مسلمانو ځوانانو كې د غورځنګ روحيه راويښه كړه. له هرلمانځه څخه وروسته به يې له ځوانانو سره د پوهنتون سياسي روان حالات څېړل. د هغوي نظربه يې مالوماوه، او د هغوي اسلامي روحيه به يې راويښوله.
-پدې وخت كې له شهيد مولوي حبيب الرحمن سره او بيا دهغه له لارې د شريعياتو له ځينو نورو وروڼو سره  اشنا كېږي. 
+حكمتيار له هرلمانځه څخه وروسته به يې له ځوانانو سره د پوهنتون سياسي روان حالات څېړل. د هغوي نظربه يې مالوماوه، او د هغوي اسلامي روحيه به يې تلله.
+پدې وخت كې له شهيد مولوي حبيب الرحمن سره او بيا دهغه له لارې د شريعياتو له ځينو نورو کسانو سره  اشنا كېږي. 
 د ليدنو كتنو دا كړۍ ورځ په ورځ پراخېدله ، نو وروڼو وپتېيله چې د يوه منظم سياسي كار د روانولو لپاره سره راغونډ شي  او ټول هغه وروڼه راوبلي 
 چې ددې كار لپاره وړ كسان وي. د هماغه پسرلي په يوې داسې شپه كې چې باران ورېده او د پوهنتون په انګړ كې هېڅوك نه ليدل كېدل، د ښوونې او روزنې د پوهنځي په يوه ښوونيزه خونه كې لاندې مسلمان ځوانان سره راټول شول:
 
