/* د اسلامي غورځنګ جوړېدنه */

--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -57,8 +57,8 @@
 
 حكمتيار له هرلمانځه څخه وروسته به يې له ځوانانو سره د پوهنتون سياسي روان حالات څېړل. د هغوي نظربه يې مالوماوه، او د هغوي اسلامي روحيه به يې تلله.
 پدې وخت كې له شهيد مولوي حبيب الرحمن سره او بيا دهغه له لارې د شريعياتو له ځينو نورو کسانو سره  اشنا كېږي. 
-د ليدنو كتنو دا كړۍ ورځ په ورځ پراخېدله ، نو وروڼو وپتېيله چې د يوه منظم سياسي كار د روانولو لپاره سره راغونډ شي  او ټول هغه وروڼه راوبلي 
-چې ددې كار لپاره وړ كسان وي. د هماغه پسرلي په يوې داسې شپه كې چې باران ورېده او د پوهنتون په انګړ كې هېڅوك نه ليدل كېدل، د ښوونې او روزنې د پوهنځي په يوه ښوونيزه خونه كې لاندې مسلمان ځوانان سره راټول شول:
+د ليدنو كتنو دا كړۍ ورځ په ورځ پراخېدله ، نو دغوکسانو وپتېيله چې د يوه منظم سياسي كار د روانولو لپاره سره راغونډ شي  او ټول هغه کسان راوبلي 
+چې ددې كار لپاره وړ كسان وي. د هماغه پسرلي په يوې داسې شپه كې چې باران ورېده او د پوهنتون په انګړ كې هېڅوك نه ليدل كېدل، د ښوونې او روزنې د پوهنځي په يوه ښوونيزه خونه كې لاندې ځينې ځوانان سره راټول شول:
 
 ۱- شهيد عبدالرحيم نيازي
 
