--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -83,9 +83,9 @@
 
 حكمتيار له خپل سياسي او جهادي ژوند سره سره ليك ليكنې ته بشپړ وخت وركړى، او خپل سياسي، جهادي، ديني او ټولنيز موضوعات يې د قلم ژبې ته وركړي، او ښې ډېرې ليكنې يې كړي، چې د اټكل له مخې يۍ شمېره ۱۰۰ سلو ډول، ډول موضوعاتو ته رسېږي. 
 
-د افغانستان په سياسي، ديني او ټولنيز بهير كې به دا لومړنې كس وي، چې دومره ستر كار ترسره كوي.
+د افغانستان په سياسي، ديني او ټولنيز بهير كې به دی هم يو د ليک او نظر كس وي، چې دومره ليکنې ېې ترسره كړي.
 
-په لاندې ډول به د هغو كتابونو نومونه ياد كړو چې دوي ليكلي:
+په لاندې ډول د هغو كتابونو نومونه ياد شوي چې انجنير ګلبدين حکمتيار ليكلي:
 
 
 === پوهنیز او ديني ليكنې ===
