--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -162,7 +162,7 @@
 
 
 یادښت: 
-د یادولو وړ ده، چې حکمتیار د افغانستان ټولو مخورو، دینپوهانو، پخوانیو جهادي څېرو او نورو ته چې نن سبا په افغانستان یا بهر کې اوسېږي، څه باندې ۶۰۰۰ لیکونه ددده سره د جهاد په موخه د ښکېلاک پر ضد ودرېږي  . 
+د یادولو وړ ده، چې حکمتیار د افغانستان ټولو مخورو، دینپوهانو، پخوانیو جهادي څېرو او نورو ته چې نن سبا په افغانستان یا بهر کې اوسېږي، څه باندې ۶۰۰۰ لیکونه ددده سره د جهاد په موخه د ښکېلاک پر ضد ددرېدو ورلېږي. 
 دا لیکونه به په لنډ راتلونکې کې د یوه پوهنغونډ (دایرة المعارف په توګه د چاپ په ګاڼه وپسولل شي.
 
 ==انځوریز البوم==
