--- a/د_افغانستان_اسلامي_حزب.mw
+++ b/د_افغانستان_اسلامي_حزب.mw
@@ -34,7 +34,7 @@
 ==سرچینې==
 
 ==دا هم وګورﺉ==
-==بهرنې تړن==
+==باندنۍ تړنې==
 * [http://tanweer.blogfa.com د تنویر په نامه بلاګ]
 
 * [http://.tanweer.blogfa.com صفحه دوستداران وطن]
