*Empty MediaWiki Message*

--- a/۲۷_کب.mw
+++ b/۲۷_کب.mw
@@ -1,1 +1,21 @@
 {{کب}}
+== پېښې ==
+*[[۱۳۸۷]] - د سردار شهيد محمد داؤد خان او د هغه د ورور سردار محمد نعيم خان موندل شوي جسدونه په کابل کې د دولتي لمانځنو په ترڅ کې خاورو ته وسپارل شو.
+
+
+== زېږېدنې ==
+
+
+
+== مړينې ==
+
+
+
+== رخصتيانې ==
+
+
+== باندنۍ تړنې ==
+
+
+
+== سرچينې ==
