--- a/۲۷_کب.mw
+++ b/۲۷_کب.mw
@@ -1,6 +1,6 @@
 {{کب}}
 == پېښې ==
-*[[۱۳۸۷]] - د سردار شهيد محمد داؤد خان او د هغه د ورور سردار محمد نعيم خان موندل شوي جسدونه په کابل کې د دولتي لمانځنو په ترڅ کې خاورو ته وسپارل شو.
+*[[۱۳۸۷]] - د سردار شهيد محمد داؤد خان او د هغه د ورور سردار محمد نعيم خان موندل شوي جسدونه په کابل کې د دولتي لمانځنو په ترڅ کې خاورو ته وسپارل شو.<ref>[http://www.bbc.co.uk/pashto/news/story/2009/03/090318_daudkhan_ceremony.shtml د بي بي سي پښتو خبري پاڼه].</ref>
 
 
 == زېږېدنې ==
