--- a/نبي_مصداق.mw
+++ b/نبي_مصداق.mw
@@ -15,3 +15,10 @@
 مصداق له ( بي، بي، سي) سره د خدمت په دوره کې په سلهاومضمونونه د ازادو مهاجرو مطبوعاتو ته کله په خپل نوم او کله هم په مستعارو نومونو، په پښتو، انګليسي او دري ژبو ليکلي دي.  هغه په 1997 کې چې د لوي احمد شاه با با 250 تلين وو، د هغې ورځې د نماځلو لپاره په انګليسي ژبه د (افغانستان د لمړنې معاصر پاچا) ترعنوان لاندې يو کتاب  وليکلو او هم ېې يو دوهم کتاب په انګليسي ژبه چې (افغانستان- سياسي کمزوري او خارجي مداخلو) تر عنوان لاندې دی وليکلو.  دا دوهم کتاب يو اکادوميک کتاب دی چې په لندن کې يوې معتبرې مطبعې (روتلج) له خوا په لندن او نيو يارک کې چاپ شوي چې برسېره په عادي انفرادي خلکو تر 500 پوهنتونو کتابتونونو اوعلمي مرکزونو په امريکا او انګلستان کې أخيستی دی . 
 
 په افغانستان کې د امريکې په مداخلې سره پښتو ژبې زده کړې لپاره ليول تيا پيدا شوی چې مصداق هم ددې ليوالتيا نه (جې په تاريخ کې د پښتو د پرمختګ لپاره داسې نړۍ واله توجه بې سارې ښکاري) په استفادې سره يو لړ د پښتو اروپايي او امريکايي ژب پوهانو تربيه کړي اوهم  ېې د پښتو د زده کړې درسونه او کتابونه د انټرنټ لپاره ليکلي او ليکي.  په دې لړ کې مصداق د پښتو نه په انګليسي ژبه يوه لمړۍ جامع ډکشنري چې 40 زرولغتو نه اوښتي ده ليکلې چې اوس تر چاپ لاندې ده.
+
+
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:پښتانه ليکوال]]
+[[وېشنيزه:افغانان]]
+[[وېشنيزه:افغاني ليکوال]]
+[[وېشنيزه:افغاني وګړپوهان]]
