--- a/نبي_مصداق.mw
+++ b/نبي_مصداق.mw
@@ -1,4 +1,4 @@
-ډاکټر '''نبي مصداق''' (۱۹۴۴ ز.) يو افغان وګړپوه، سياسي شننونکی، ليکوال او په لندن کې د بي بي سي د راډيو د پښتو د څانګې بنسټ ايښودونکی او پخوانی وياند هم دی.
+ډاکټر '''نبي مصداق''' (۱۹۴۴ ز.) يو افغان وګړپوه، سياسي شننونکی، ليکوال او په لندن کې د بي بي سي د راډيو د پښتو د څانګې بنسټ ايښودونکی او پخوانی وياند هم دی. نوموړي د افغانستان په اړه هم يو کتاب کښلی چې د لوستونکو لخوا يې تود هرکلی شوی.
 
 == مخينه ==
 نبي مصداق [[د پکتيا ولايت]] د ځاځيو ولسوالې په روقيان کې زيږدلی دی. نبي مصداق د ځاځيو له يوې مشهورې کورنې نه دی. نيکه ېې باقي خان د امير عبد الرحمن نه د ځاځيو د يوه مشهور ملک په حيث د لارې د ساتلو په غرض تنخا اخيستله او امير به هم هره مياشت کورته چاي او بوره ورلېږل. د مصداق پلار مرحوم حاجي کهندل خان هم د امان اله خان په وخت کې د کابل ښار يو پيژندل شوی قراردادي وو چې د دارلامان قصر، د علي اباد د سناتوريم تعمير، د غازي ښوونځی او وروسته د ساينس فاکولتې تعميرونه ېې جوړ کړي دي. مصداق دوه زامن لري عمر او يوسف چې دواړو ېې په عالي درجه زده کړې کړي دي او په خپلو مسلکونو کې ېې کتابونه په چاپ رسولي دي.   
@@ -10,9 +10,11 @@
 
 افغانستان ته  د روسانو د لښکرو په راتګ سره مصداق خپله د ډاکټرې زده کړه و ځنډوله ترڅو د ژورنالست په صفت خپل وطن او خلکو ته د خدمت مصدر وګرزي.  نبي مصداق وايي چې هغه د ډيرو کمو محصلينو نه په اروپا کې وو چې خپل درس ېې خپلو خلکو ته د خدمت لپاره پرېښود او هم په دې عقيده وو چې افغانان به هيڅکله هم د روسانو موجوديت په خپل ملک کې و نه زغمي او ډير ژر به له افغانستان نه وشړل شي. 
 
+== دندې ==
 نبي مصداق د کمونستانو په دوره کې (بي، بي، سي) ته د کابل او روسانو خپرونې د افغانستان په باب اوريدلې او د نورو راديو ګانو تر څنګ ېې په انګليسي ژبه د (بي، بي، سي) د هر ورځينيو راپورونو لپاره ژباړلې. د افغانستان لپاره د کابل راديو او شوروي نشرات له ماسکو او تاجکستان نه مهم په دې وو چې له افغانستان نه ټول خارجي خبريالان ايستل شوي وو او د لويديخ په سفارتونو کې هم يواځې دوه با درې تنه به پاتي وو او نړۍ نه پوهيده چې افغانستان کې د کمونستانو د راتګ په دوره کې څه پيښيدل.  له نبي مصداق نه، وروسته له دؤ ويشتو مياشتو نه (بي، بي، سي) غوښتنه وکړه چې په لندن کې له (بوش هوس) نه چې د خارجي خپرونو مرکز دی، د پښتو ژبې خبرونې پيل کړي.   (بي، بي، سي) بلاخره  په اګست 1982 کې په پښتو ژبه چې کالونه ېې پاکستان مخالفت کاوه، پښتو خپرونه بيل کړه او مصداق ېې د لمړی ورځې نه بنسټ کيښود.  مصداق وروسته له تقريبا  شل کاله کار نه په (بي، بي، سي) کې بيرته پوهنتون ته ولاړ چې هغه ځنډمن شوې دوکتورې باندې له سره څېړنه پيل کړي. د زده کړې دا دوره هغه په خپل مصرف (د وګړپوهنې) په څانګه کې بشپړ کړه او د ميرمنې له فاميل سره د خپلو دو ځامنوسره واشنګتن ته په 2001 کې وکوچيد. 
 
-مصداق له ( بي، بي، سي) سره د خدمت په دوره کې په سلهاومضمونونه د ازادو مهاجرو مطبوعاتو ته کله په خپل نوم او کله هم په مستعارو نومونو، په پښتو، انګليسي او دري ژبو ليکلي دي.  هغه په 1997 کې چې د لوي احمد شاه با با 250 تلين وو، د هغې ورځې د نماځلو لپاره په انګليسي ژبه د (افغانستان د لمړنې معاصر پاچا) ترعنوان لاندې يو کتاب  وليکلو او هم ېې يو دوهم کتاب په انګليسي ژبه چې (افغانستان- سياسي کمزوري او خارجي مداخلو) تر عنوان لاندې دی وليکلو.  دا دوهم کتاب يو اکادوميک کتاب دی چې په لندن کې يوې معتبرې مطبعې (روتلج) له خوا په لندن او نيو يارک کې چاپ شوي چې برسېره په عادي انفرادي خلکو تر 500 پوهنتونو کتابتونونو اوعلمي مرکزونو په امريکا او انګلستان کې أخيستی دی . 
+== د ليکوالۍ ډګر ==
+مصداق له ( بي، بي، سي) سره د خدمت په دوره کې په سلهاو مضمونونه د ازادو مهاجرو مطبوعاتو ته کله په خپل نوم او کله هم په مستعارو نومونو، په پښتو، انګليسي او دري ژبو ليکلي دي.  هغه په 1997 کې چې د لوي احمد شاه با با 250 تلين وو، د هغې ورځې د نماځلو لپاره په انګليسي ژبه د (افغانستان د لمړنې معاصر پاچا) ترعنوان لاندې يو کتاب  وليکلو او هم ېې يو دوهم کتاب په انګليسي ژبه چې (افغانستان- سياسي کمزوري او خارجي مداخلو) تر عنوان لاندې دی وليکلو.  دا دوهم کتاب يو اکادوميک کتاب دی چې په لندن کې يوې معتبرې مطبعې (روتلج) له خوا په لندن او نيو يارک کې چاپ شوي چې برسېره په عادي انفرادي خلکو تر 500 پوهنتونو کتابتونونو اوعلمي مرکزونو په امريکا او انګلستان کې أخيستی دی . 
 
 په افغانستان کې د امريکې په مداخلې سره پښتو ژبې زده کړې لپاره ليول تيا پيدا شوی چې مصداق هم ددې ليوالتيا نه (جې په تاريخ کې د پښتو د پرمختګ لپاره داسې نړۍ واله توجه بې سارې ښکاري) په استفادې سره يو لړ د پښتو اروپايي او امريکايي ژب پوهانو تربيه کړي اوهم  ېې د پښتو د زده کړې درسونه او کتابونه د انټرنټ لپاره ليکلي او ليکي.  په دې لړ کې مصداق د پښتو نه په انګليسي ژبه يوه لمړۍ جامع ډکشنري چې 40 زرولغتو نه اوښتي ده ليکلې چې اوس تر چاپ لاندې ده.
 
