--- a/نبي_مصداق.mw
+++ b/نبي_مصداق.mw
@@ -14,9 +14,9 @@
 نبي مصداق د کمونستانو په دوره کې (بي، بي، سي) ته د کابل او روسانو خپرونې د افغانستان په باب اوريدلې او د نورو راديو ګانو تر څنګ ېې په انګليسي ژبه د (بي، بي، سي) د هر ورځينيو راپورونو لپاره ژباړلې. د افغانستان لپاره د کابل راديو او شوروي نشرات له ماسکو او تاجکستان نه مهم په دې وو چې له افغانستان نه ټول خارجي خبريالان ايستل شوي وو او د لويديخ په سفارتونو کې هم يواځې دوه با درې تنه به پاتي وو او نړۍ نه پوهيده چې افغانستان کې د کمونستانو د راتګ په دوره کې څه پيښيدل.  له نبي مصداق نه، وروسته له دؤ ويشتو مياشتو نه (بي، بي، سي) غوښتنه وکړه چې په لندن کې له (بوش هوس) نه چې د خارجي خپرونو مرکز دی، د پښتو ژبې خبرونې پيل کړي.   (بي، بي، سي) بلاخره  په اګست 1982 کې په پښتو ژبه چې کالونه ېې پاکستان مخالفت کاوه، پښتو خپرونه بيل کړه او مصداق ېې د لمړی ورځې نه بنسټ کيښود.  مصداق وروسته له تقريبا  شل کاله کار نه په (بي، بي، سي) کې بيرته پوهنتون ته ولاړ چې هغه ځنډمن شوې دوکتورې باندې له سره څېړنه پيل کړي. د زده کړې دا دوره هغه په خپل مصرف (د وګړپوهنې) په څانګه کې بشپړ کړه او د ميرمنې له فاميل سره د خپلو دو ځامنوسره واشنګتن ته په 2001 کې وکوچيد. 
 
 == د ليکوالۍ ډګر ==
-مصداق له ( بي، بي، سي) سره د خدمت په دوره کې په سلهاو مضمونونه د ازادو مهاجرو مطبوعاتو ته کله په خپل نوم او کله هم په مستعارو نومونو، په پښتو، انګليسي او دري ژبو ليکلي دي.  هغه په 1997 کې چې د لوي احمد شاه با با 250 تلين وو، د هغې ورځې د نماځلو لپاره په انګليسي ژبه د (افغانستان د لمړنې معاصر پاچا) ترعنوان لاندې يو کتاب  وليکلو او هم ېې يو دوهم کتاب په انګليسي ژبه چې (افغانستان- سياسي کمزوري او خارجي مداخلو) تر عنوان لاندې دی وليکلو.  دا دوهم کتاب يو اکادوميک کتاب دی چې په لندن کې يوې معتبرې مطبعې (روتلج) له خوا په لندن او نيو يارک کې چاپ شوي چې برسېره په عادي انفرادي خلکو تر 500 پوهنتونو کتابتونونو اوعلمي مرکزونو په امريکا او انګلستان کې أخيستی دی . 
+مصداق په بي بي سي راډيو کې د وياندۍ له وختونو په ليکوالۍ او خبريالي چارو بوخت پاتې شوی. د هغه ګڼ شمېر ليکنې د آزادو مهاجرو په رسنيو کې کله په مستعارو نومونو او کله هم په آرني نوم په پښتو، انګرېزي او دري ژبو خپرې شوي. په ۱۹۹۷ ز. کال کې چې کله د احمد شاه دراني ۲۵۰ تلين ؤ نو د همدغې ورځې د لمانځلو په وياړ يې په انګرېزي ژبه خپل لومړنی کتاب خپور کړ چې سرليک يې ''د افغانستان لومړنی معاصر پاچا'' ټاکلی. تر دې وروسته يې خپل دويم اکادميک کتاب د افغانستان - سياسي کمزوري او خارجي مداخلې تر سرليک لاندې په لندن کې د روتلج خپرندويه ټولنې خپور کړ. همدا راز دا کتاب په نيويارک کې د دوهم ځل لپاره چاپ شوی چې د امريکا د پوهنتونو په کتابتونونو او  پوهنيزو مرکزونو کې هم موندل کېږي.
 
-په افغانستان کې د امريکې په مداخلې سره پښتو ژبې زده کړې لپاره ليول تيا پيدا شوی چې مصداق هم ددې ليوالتيا نه (جې په تاريخ کې د پښتو د پرمختګ لپاره داسې نړۍ واله توجه بې سارې ښکاري) په استفادې سره يو لړ د پښتو اروپايي او امريکايي ژب پوهانو تربيه کړي اوهم  ېې د پښتو د زده کړې درسونه او کتابونه د انټرنټ لپاره ليکلي او ليکي.  په دې لړ کې مصداق د پښتو نه په انګليسي ژبه يوه لمړۍ جامع ډکشنري چې 40 زرولغتو نه اوښتي ده ليکلې چې اوس تر چاپ لاندې ده.
+په افغانستان کې د امريکې په مداخلې سره پښتو ژبې زده کړې لپاره ليول تيا پيدا شوی چې مصداق هم د دې ليوالتيا نه (جې په تاريخ کې د پښتو د پرمختګ لپاره داسې نړۍ واله توجه بې سارې ښکاري) په استفادې سره يو لړ د پښتو اروپايي او امريکايي ژب پوهانو تربيه کړي اوهم  ېې د پښتو د زده کړې درسونه او کتابونه د انټرنټ لپاره ليکلي او ليکي.  په دې لړ کې مصداق د پښتو نه په انګليسي ژبه يوه لمړۍ جامع ډکشنري چې 40 زرولغتو نه اوښتي ده ليکلې چې اوس تر چاپ لاندې ده.
 
 
 [[وېشنيزه:پښتانه]]
