--- a/نبي_مصداق.mw
+++ b/نبي_مصداق.mw
@@ -4,11 +4,11 @@
 نبي مصداق [[د پکتيا ولايت]] د ځاځيو ولسوالې په روقيان کې زيږدلی دی. نبي مصداق د ځاځيو له يوې مشهورې کورنې نه دی. نيکه ېې باقي خان د امير عبد الرحمن نه د ځاځيو د يوه مشهور ملک په حيث د لارې د ساتلو په غرض تنخا اخيستله او امير به هم هره مياشت کورته چاي او بوره ورلېږل. د مصداق پلار مرحوم حاجي کهندل خان هم د امان اله خان په وخت کې د کابل ښار يو پيژندل شوی قراردادي وو چې د دارلامان قصر، د علي اباد د سناتوريم تعمير، د غازي ښوونځی او وروسته د ساينس فاکولتې تعميرونه ېې جوړ کړي دي. مصداق دوه زامن لري عمر او يوسف چې دواړو ېې په عالي درجه زده کړې کړي دي او په خپلو مسلکونو کې ېې کتابونه په چاپ رسولي دي.   
 
 == زده کړې ==
-مصداق خپله ابتدايه زده کړه په طالقانو کې، چې مشر ورور ېې مرحوم درمرجان خان د قطغن او بدځشان د معارف مدير وو، شروع کړه او په شپږو مياشتو کې ېې لمړی او دوهم صنف ولوست او کابل کې دريم صنف ته په هماغه کال کې قبول شو.   مصداق د کابل په نمره يو ابتدايه ښونځي کې به لمړی يا دوهم نمره تر شپږم ټولګي پورې کاميابيدو او په شپږم ټولکي کې وروسته د درې مياشتې او شپږ مياشتينې  ِازموينې نه د مريضې له امله د علي اباد په روغتون کې د دو مياشتو لپاره بستر شو،  خو د هغه درې مياشتنې او شپږ مياشتنې د نمرو د اوسط له مخې بيا هم شپږم نمره کامياب را ؤخوت. نبي مصداق بيا د رحمن با با په ښونځي کې داخل شو او د دولسم ټولګي، د رحمن با با د لمړې دورې له فراغت نه وروسته د خپل يو همصنفي، هاشم تڼيوال، سره ېې انګلستان ته بورس واخيست.  په کابل کې د مرحوم علي احمد خان د پوهنې وزير پر ځاې يو څوک چې په سختي او سوګتي کې ېې د پوهنې په وزارت کې شهرت درلود د ډاکټرانس په نوم د پوهنې وزير شو او هغه په انګلستان او يو شمير نورو محصلينو بورسونه په المان، فرانسه او بلجيم کې چې د پوهنې وزارت لخوا ېې ګټلي وو بيرته ور څخه واخيست او هغو ته ېې وويل چې د فاکولتې دورې لپاره بايد بيرته کابل ته ستانه شي.  نبي مصداق او هاشم تڼيوال دواړو چې يو کال ېې په کابل کې د انګلستان د بورس لپاره انتظار ايستلي وو حاضر نشول چې وروسته له يونيم کال نه په انګلستان کې بيرته کابل ته ولاړ شي او همصنفيان ېې چې ځلورم ټولګي ته کامياب شوي وو، دوي له اول صنف نه په کومه فاکولته کې هلته شروع کړي وای.  مصداق او تڼيوال په لندن کې له زياتو اقتصادي او د ويزې د تجديد له مشکلاتو سره مخامخ شول چې بلاخره تڼيوال تصميم ونيو چې د (جي، سي، اي) د دورې له تکميل نه وروسته وطن ته ستون شي او مصداق په لندن پوهنتون کې ، تعليم او تربيه لپاره، د يوه انګليسي بورس د ګټلو نه وروسته دوام ورکړ.  د تعليم او تربيه له فراغت نه وروسته هغه دوه کاله د لندن په ښونځيو کې درس ورکړ او بيرته د لندن بوهنتون (ال ، اس، اي) کې د وګړپوهنې په څانګه کې په زده کړه پيل وکړ.  مصداق د لندن ددې مشهور کالج نه په (هانرز) درجه ليسانس واخيست او ماسترې لپاره په اکسفورد، د لندن د اسياېې او افريقايي څيړنو کالج او ساسکس پوهنتون کې قبول شو.  له دې ټولو نه مصداق د ساسکس پوهنتون په دې خوښ کړ چې د پروفيسر (براين سټريټ) چې په ايران او افغانستان کې څيړنې کړې وې د هغه تررهنماې لاندې څيړنه وکړي .
+مصداق خپله ابتدايه زده کړه په طالقانو کې، چې مشر ورور ېې مرحوم درمرجان خان د قطغن او بدخشان د معارف مدير وو، شروع کړه او په شپږو مياشتو کې ېې لمړی او دوهم صنف ولوست او کابل کې دريم صنف ته په هماغه کال کې قبول شو. مصداق د کابل په نمره يو ابتدايه ښونځي کې به لمړی يا دوهم نمره تر شپږم ټولګي پورې کاميابيدو او په شپږم ټولکي کې وروسته د درې مياشتې او شپږ مياشتينې  ِازموينې نه د مريضې له امله د علي اباد په روغتون کې د دو مياشتو لپاره بستر شو،  خو د هغه درې مياشتنې او شپږ مياشتنې د نمرو د اوسط له مخې بيا هم شپږم نمره کامياب را ؤخوت. نبي مصداق بيا د رحمن با با په ښونځي کې داخل شو او د دولسم ټولګي، د رحمن با با د لمړې دورې له فراغت نه وروسته د خپل يو همصنفي، هاشم تڼيوال، سره ېې انګلستان ته بورس واخيست.  په کابل کې د مرحوم علي احمد خان د پوهنې وزير پر ځاې يو څوک چې په سختي او سوګتي کې ېې د پوهنې په وزارت کې شهرت درلود د ډاکټرانس په نوم د پوهنې وزير شو او هغه په انګلستان او يو شمير نورو محصلينو بورسونه په المان، فرانسه او بلجيم کې چې د پوهنې وزارت لخوا ېې ګټلي وو بيرته ور څخه واخيست او هغو ته ېې وويل چې د فاکولتې دورې لپاره بايد بيرته کابل ته ستانه شي.  نبي مصداق او هاشم تڼيوال دواړو چې يو کال ېې په کابل کې د انګلستان د بورس لپاره انتظار ايستلي وو حاضر نشول چې وروسته له يونيم کال نه په انګلستان کې بيرته کابل ته ولاړ شي او همصنفيان ېې چې ځلورم ټولګي ته کامياب شوي وو، دوي له اول صنف نه په کومه فاکولته کې هلته شروع کړي وای.  مصداق او تڼيوال په لندن کې له زياتو اقتصادي او د ويزې د تجديد له مشکلاتو سره مخامخ شول چې بلاخره تڼيوال تصميم ونيو چې د (جي، سي، اي) د دورې له تکميل نه وروسته وطن ته ستون شي او مصداق په لندن پوهنتون کې ، تعليم او تربيه لپاره، د يوه انګليسي بورس د ګټلو نه وروسته دوام ورکړ.  د تعليم او تربيه له فراغت نه وروسته هغه دوه کاله د لندن په ښونځيو کې درس ورکړ او بيرته د لندن بوهنتون (ال ، اس، اي) کې د وګړپوهنې په څانګه کې په زده کړه پيل وکړ.  مصداق د لندن ددې مشهور کالج نه په (هانرز) درجه ليسانس واخيست او ماسترې لپاره په اکسفورد، د لندن د اسياېې او افريقايي څيړنو کالج او ساسکس پوهنتون کې قبول شو.  له دې ټولو نه مصداق د ساسکس پوهنتون په دې خوښ کړ چې د پروفيسر (براين سټريټ) چې په ايران او افغانستان کې څيړنې کړې وې د هغه تررهنماې لاندې څيړنه وکړي .
 
 مصداق د ماسټرې دوره په شپږو مياشتو کې سرته ورسوله او پوهنتون د هغه د ماسټری تيسز په خپل کتابتون کې، د يواځيني ماسټرې د تيسز په حيث د (ام، فيل او دکتورې) د تيسزونو تر څنګ ساتلی دی او هم هغه ته د برطانيې (د سوشل ساينس ريسرچ) د علمي ادارې لخوا د درو کالو لپاره د دکتورا د زده کړې د تماميدو له پاره يو بل بورس ورکړ شو. 
 
-افغانستان ته  د روسانو د لښکرو په راتګ سره مصداق خپله د ډاکټرې زده کړه و ځنډوله ترڅو د ژورنالست په صفت خپل وطن او خلکو ته د خدمت مصدر وګرزي.  نبي مصداق وايي چې هغه د ډيرو کمو محصلينو نه په اروپا کې وو چې خپل درس ېې خپلو خلکو ته د خدمت لپاره پرېښود او هم په دې عقيده وو چې افغانان به هيڅکله هم د روسانو موجوديت په خپل ملک کې و نه زغمي او ډير ژر به له افغانستان نه وشړل شي. 
+افغانستان ته  د روسانو د لښکرو په راتګ سره مصداق خپله د ډاکټرې زده کړه و ځنډوله ترڅو د ژورنالست په صفت خپل وطن او خلکو ته د خدمت مصدر وګرزي.  نبي مصداق وايي چې هغه د ډيرو کمو محصلينو نه په اروپا کې وو چې خپل درس ېې خپلو خلکو ته د خدمت لپاره پرېښود او هم په دې عقيده وو چې افغانان به هيڅکله هم د روسانو موجوديت په خپل ملک کې و نه زغمي او ډير ژر به له افغانستان نه وشړل شي.
 
 == دندې ==
 نبي مصداق د کمونستانو په دوره کې (بي، بي، سي) ته د کابل او روسانو خپرونې د افغانستان په باب اوريدلې او د نورو راديو ګانو تر څنګ ېې په انګليسي ژبه د (بي، بي، سي) د هر ورځينيو راپورونو لپاره ژباړلې. د افغانستان لپاره د کابل راديو او شوروي نشرات له ماسکو او تاجکستان نه مهم په دې وو چې له افغانستان نه ټول خارجي خبريالان ايستل شوي وو او د لويديخ په سفارتونو کې هم يواځې دوه با درې تنه به پاتي وو او نړۍ نه پوهيده چې افغانستان کې د کمونستانو د راتګ په دوره کې څه پيښيدل.  له نبي مصداق نه، وروسته له دؤ ويشتو مياشتو نه (بي، بي، سي) غوښتنه وکړه چې په لندن کې له (بوش هوس) نه چې د خارجي خپرونو مرکز دی، د پښتو ژبې خبرونې پيل کړي.   (بي، بي، سي) بلاخره  په اګست 1982 کې په پښتو ژبه چې کالونه ېې پاکستان مخالفت کاوه، پښتو خپرونه بيل کړه او مصداق ېې د لمړی ورځې نه بنسټ کيښود.  مصداق وروسته له تقريبا  شل کاله کار نه په (بي، بي، سي) کې بيرته پوهنتون ته ولاړ چې هغه ځنډمن شوې دوکتورې باندې له سره څېړنه پيل کړي. د زده کړې دا دوره هغه په خپل مصرف (د وګړپوهنې) په څانګه کې بشپړ کړه او د ميرمنې له فاميل سره د خپلو دو ځامنوسره واشنګتن ته په 2001 کې وکوچيد. 
