--- a/نبي_مصداق.mw
+++ b/نبي_مصداق.mw
@@ -1,3 +1,4 @@
+[[Image:Nabi Misdaq.jpg|thumb|300px|ډاکټر نبي مصداق]]
 ډاکټر '''نبي مصداق''' (۱۹۴۴ ز.) يو افغان وګړپوه، سياسي شننونکی، ليکوال او په لندن کې د بي بي سي د راډيو د پښتو د څانګې بنسټ ايښودونکی او پخوانی وياند هم دی. نوموړي د افغانستان په اړه هم يو کتاب کښلی چې د لوستونکو لخوا يې تود هرکلی شوی.
 
 == مخينه ==
