--- a/محمد_افضل_ټکور.mw
+++ b/محمد_افضل_ټکور.mw
@@ -1,3 +1,4 @@
+[[انځور:AfzalTakoor.jpg|thumb|289px|محمد افضل ټکور]]
 ښاغلی افضل ټکور په کال ١٣٣٩ لمريز کال کي د ننګرهار ولايت د کوزکونړ ولسوالۍ دکوټۍ په کلي کي زېږيدلی دی .
 
 == زده کړې ==
