*Empty MediaWiki Message*

--- a/صالح_محمد_صالح.mw
+++ b/صالح_محمد_صالح.mw
@@ -1,3 +1,4 @@
-[[Category: پښتانه شاعران]]
-[[Category: پښتانه ليکوالان]]
-[[Category: پښتانه ژباړونکي]]
+[[انځور:Salih Mohammad Salih.jpg|thumb|289px|صالح محمد صالح]]
+[[وېشنيزه: پښتانه شاعران]]
+[[وېشنيزه: پښتانه ليکوالان]]
+[[وېشنيزه: پښتانه ژباړونکي]]
