--- a/معتزله.mw
+++ b/معتزله.mw
@@ -218,15 +218,12 @@
 
 
 ==بهرنۍ تړنې==
-
-[[تصنيف:معتزلة]]
-
 * [http://www.al-a7rar.net/forum/index.php/ د ازادخيالو او معتزله و بلاګ]
 * [http://alhousseiny.wordpress.com/ د معاصرو معتزليانو ګورتځى]
 * [http://mu3tazela.maktoobblog.com/ د معتزليانو د عدل او توحيد بلاګ]
 * [http://www.almutazela.com په اوسني پير كې د معتزليانو غورځنګ]
 * [http://www.geocities.com/mutazela موقع أمين نايف ذياب]
-[http://www.http://www.esnips.com/web/Mu3tazelaHeritagebooks.com د معتزلي كتابونو ګورتځى]
+* [http://www.http://www.esnips.com/web/Mu3tazelaHeritagebooks.com د معتزلي كتابونو ګورتځى]
 
 [[de:Mu'tazila]]
 [[en:Mu'tazili]]
