--- a/معتزله.mw
+++ b/معتزله.mw
@@ -37,6 +37,7 @@
 #'''التوحيد''' يا د څښتن يووالې: چې له دې څخه د معتزليانو موخه د د څښتن تعالى يووالې په زبات رسول او له هغه څخه د مثل نفي كول دي. نو پدې توګه يې له څښتن تعالى څخه د هغه صفات نفي كړل. اوس دوي څښتن تعالى په لاندې اسلوب سره متصوفوي او د څښتن په اړه داسې وايي:
 څښتن تعالى نه جوهر دى، او نه عرض، نه اوږد او نه لنډ نه رنګ لري، او نه خوند، نه بوي لري او نه تودوخه لري او نه سوړوالې.... او داسې نور. او هغه ثابت شوي صفات لكه علم او قدرت نو بيا دا صفتونه له څښتن تعالى څخه په لاندې دليل سره نفي كوي. دوي وايي، چې ددې صفاتو په لرغونوالي (قديموالي) سره، دا په دې مانا چې بې له څښتن څخه يو بل شې هم لرغونې او قديم شته. 
 #'''العدل''': له عدل څخه دوي د څښتن تعالى احكام په [[العقل]] او[[الحكمة]] سره تعبيروي، پدې توګه دوي ځيني امور له څښتن څخه نفي كوي  او ځيني نور ورپورې تړي،دوي دا نه مني چې ګني څښتن تعالى د مخلوفاتو د افعالو پيداكوونكې دى، دوي وايي: بندګان په خپله د خپلو افعالو او كارونو پيداكوونكي دي، كه هغه شر وي او كه خير . ابو محمد [[بن حزم]] داسې وايي:" معتزله داسې وايي: بأسرها حاشا ضرار بن عبد الله الغطفاني الكوفي ومن وافقه [[كحفص الفرد]] و[[كلثوم]] وأصحابه :::: د بنده ټول كارونه كه هغه د حركاتو څخه وي، كه اوسېدو څخه وي، كه هغه ويناوې وي، يا نورې معاملې وي، دا كارونه څښتن تعالې ندي پيدا كړي.  او په څښتن تعالى يې دا واجبه كړې چې د خپل بنده لپاره ښه او صالح افعال پيدا كړي، په دې اړه [[الشهرستاني]] داسې وايي:" معتزله و پدې خبره سره يو دي، چې څښتن تعالى بې له خېر او صلاح څخه بل څه نه پيدا كوي. ، ويجب من حيث الحكمة رعاية مصالح العباد وأما الأصلح واللطف ففي وجوبه عندهم خلاف وسموا هذا النمط عدلا "، وقالوا أيضا بأن العقل مستقل بالتحسين والتقبيح، فما حسنه العقل كان حسنا، وما قبحه كان قبيحا، وأوجبوا الثواب على فعل ما استحسنه العقل، والعقاب على فعل ما استقبحه.
+{{ژباړل}}
 #'''المنزلة بين المنزلتين''': وهذا الأصل يوضح حكم [[الفاسق]] في [[الدنيا]] عند المعتزلة، وهي المسألة التي اختلف فيها [[واصل بن عطاء]] مع [[الحسن البصري]]، إذ يعتقد المعتزلة أن الفاسق في الدنيا لا يسمى مؤمنا بوجه من الوجوه، ولا يسمى كافرا بل هو في منزلة بين هاتين المنزلتين، فإن تاب رجع إلى إيمانه، وإن مات مصرا على فسقه كان من المخلدين في عذاب [[جهنم]].
 #'''الوعد والوعيد''': والمقصود به إنفاذ الوعيد في [[الآخرة]] على أصحاب [[الكبائر]] وأن الله لا يقبل فيهم [[شفاعة]]، ولا يخرج أحدا منهم من [[ جهنم|النار]]، فهم كفار خارجون عن [[الملة]] مخلدون في نار [[جهنم]]، قال الشهرستاني:" واتفقوا - أي المعتزلة - على أن المؤمن إذا خرج من الدنيا على طاعة وتوبة استحق الثواب والعوض. وإذا خرج من غير [[توبة]] عن كبيرة ارتكبها استحق الخلود في النار لكن يكون عقابه أخف من عقاب الكفار وسموا هذا النمط وعدا ووعيدا".  
 #'''الأمر بالمعروف والنهي عن المنكر''': وهذا الأصل يوضح موقف المعتزلة من أصحاب الكبائر سواء أكانوا حكاما أم محكومين، قال الإمام الأشعري في المقالات :" وأجمعت  المعتزلة إلا الأصم على وجوب الأمر بالمعروف والنهى عن المنكر مع الإمكان والقدرة باللسان واليد والسيف كيف قدروا على ذلك" فهم يرون قتال أئمة الجور لمجرد فسقهم، ووجوب الخروج عليهم عند القدرة على ذلك وغلبة الظن بحصول الغلبة وإزالة المنكر.
@@ -67,25 +68,17 @@
 ى. څښتن تعالى نه په دې نړۍ او نه هم په هغه نړۍ كې د ليدو وړ دى. 
 طبيعيات 
 الف. جسم  له داسې ذرو څخه جوړ دى، چې هېڅ نه ويشل كېږي (نه تجزيه كېږي).
- ب. بوي له هغو ذرو څخه عبارت دى، چې په هوا كې خپرېږي. 
-
+ب. بوي له هغو ذرو څخه عبارت دى، چې په هوا كې خپرېږي. 
 
 === لومړې يووالې (توحيد) ===
-
 د توحيد ويى د معتزليانو لپاره يو ځانګړې اهميت لري، او هغه ددوي لپاره: 
-
-
 # مطلق تنزيه: "'''ليس كمثله شيء'''" نه تشبيه كول، او نه تجسيم، بلكه څښتن تعالى له دې څخه مبرا كوي، چې د حسي موجوداتو يا اجسامو په څېر وي. او دا خبره هم ردوي، چې ګڼې څښتن تعالى او مخلوقات يې سره پرته كړي. هغه اياتونه چې د څښتن تعالى په اړه دي، او همدې موضوع پورې اړوند دي، په بل ډول يې اړوي، لكه په دې ايات كې چې څښتن تعالى فرمايي: 
 لمبدأ التوحيد مفهوم خاص عند المعتزلة, و هو يعني لهم: "'''ويبقى وجه ربك ذو الجلال والإكرام'''" معتزليان وايي، چې د (وجه) مخ څخه په دې ايت كې موخه د څښتن ذات دى.
 # د ذات او صفاتو ترمنځ يووالې: څښتن تعالى ذات او وجود دى. او دا وجود په هغو صفاتو يادول كېږي، چې څښتن تعالى په قرآن كريم كې پرې ځان نومولې دى، لكه چې فرمايي دې (څښتن تعالى) پوه، ستر، قدير، اورېدونكې، پيداكوونكې او ليدونكې دى.
- 
 معتزليان پدې ګروه دي، چې دا صفات څښت تعالى پورې مضاف دي د مثال په توګه: انسان پوه نه زېږول كېږي. بلكه دې د وخت په تېرېدو سره پوه شي. معتزله وايي، چې دا صفات له ذات څخه بېل نه دي، بلكه دا صفات په خپله الهي ذات دى. ((علم – قدرت – اراده – حياة – سمع – بصر – *كلام) اووه (۷) صفات د ذات لپاره.
-
- 
 *;ذاتي صفات:  هغه صفات دي، چې څښتن تعالى پرې نه شو موصوفولې، نو موږ نشو كولاى چې څښتن تعالى جاهل×عالم وګرځوو، او نه هم عاجز×قادر يې ومنو...
 
 *;فعلي صفات: فعلي هغه صفات دي، چې څښتن تعالى يې پر ضد موصوفولې شو، لكه رزاق، خو كېداى شي، چې ځينې وختونه رزق وركول منع كړي. معتزله وايي، چې *كلام د فعل صفت دى، نه د ذات صفت.
-
 
 معتزليانو پدې ګروهه دي، چې د څښتن شپږ صفات د څښتن له ذات څخه نه بېلېدونكي دي، بلكه دا عين ذات يا دا صفات په خپله الهي ذات دى، ليدونكې دى، په خپلو ليدلو سره او دا ليدل يې خپل ذاتي دي، ورڅخه بېل نه دي... ځكه كه چېرې ووايو، چې دا صفات عين ذات نه دي، نو بيا پدې صورت كې الهي ذات له يووالي څخه وځي، چې دا كار د معتزليانو په ګروهه روا نه دى، ځكه چې دا كار شرك دى. د څښتن ذات او صفات دواړه قديم او لرغوني دي، كه چېرې صفات له الهي ذات څخه بېل كړاى شي، نو بيا خو دا مانا شوه، چې موږ په شرك كې پرېوتو. 
 
