--- a/نبي_مصداق.mw
+++ b/نبي_مصداق.mw
@@ -1,5 +1,5 @@
 [[Image:Nabi Misdaq.jpg|thumb|280px|ډاکټر نبي مصداق]]
-ډاکټر '''نبي مصداق''' (۱۹۴۴ ز.) يو افغان وګړپوه، سياسي شننونکی، ليکوال او د بي بي سي راډيو د پښتو د څانګې بنسټ ايښودونکی او پخوانی وياند هم دی. نوموړي د افغانستان په اړه هم يو کتاب کښلی چې د لوستونکو لخوا يې تود هرکلی شوی.
+ډاکټر '''نبي مصداق''' (۱۹۴۴ ز.) يو افغان وګړپوه، سياسي شننونکی، ليکوال او د بي بي سي راډيو د پښتو د څانګې بنسټ ايښودونکی او پخوانی وياند هم دی. نوموړي د افغانستان په اړه هم يو شمېر کتابونه کښلی چې د لوستونکو لخوا يې تود هرکلی شوی.
 
 == مخينه ==
 نبي مصداق [[د پکتيا ولايت]] د ځاځيو ولسوالې په روقيان کې زيږدلی دی. نبي مصداق د ځاځيو له يوې مشهورې کورنې نه دی. نيکه ېې باقي خان د امير عبد الرحمن نه د ځاځيو د يوه مشهور ملک په حيث د لارې د ساتلو په غرض تنخا اخيستله او امير به هم هره مياشت کورته چاي او بوره ورلېږل. د مصداق پلار مرحوم حاجي کهندل خان هم د امان اله خان په وخت کې د کابل ښار يو پيژندل شوی قراردادي وو چې د دارلامان قصر، د علي اباد د سناتوريم تعمير، د غازي ښوونځی او وروسته د ساينس فاکولتې تعميرونه ېې جوړ کړي دي. مصداق دوه زامن لري عمر او يوسف چې دواړو ېې په عالي درجه زده کړې کړي دي او په خپلو مسلکونو کې ېې کتابونه په چاپ رسولي دي.   
