/* لوړې زده کړې */

--- a/نبي_مصداق.mw
+++ b/نبي_مصداق.mw
@@ -10,7 +10,7 @@
 === دويمې زده کړې ===
 نبي مصداق خپلې دويمې زده کړې د رحمن بابا په ښونځي کې پېل کړي چې د نوموړی د همدغه ښوونځي د لومړۍ دورې له زده کوونکو څخه دی. هغه خپل د دولسم ټولګي بريليک له همدغه ښوونځي نه ترلاسه کړی او وروسته بيا د خپل يو ټولګيوال، هاشم تڼيوال، سره يوځای د لوړو زده کړو لپاره انګلستان ته ولېږل شو. 
 === لوړې زده کړې ===
-په کابل کې د مرحوم علي احمد خان د پوهنې وزير پر ځاې يو څوک چې په سختي او سوګتي کې ېې د پوهنې په وزارت کې شهرت درلود د ډاکټر انس په نوم د پوهنې وزير شو او هغه په انګلستان او يو شمير نورو محصلينو بورسونه په المان، فرانسه او بلجيم کې چې د پوهنې وزارت لخوا ېې ګټلي وو بيرته ور څخه واخيست او هغو ته ېې وويل چې د فاکولتې دورې لپاره بايد بيرته کابل ته ستانه شي.  نبي مصداق او هاشم تڼيوال دواړو چې يو کال ېې په کابل کې د انګلستان د بورس لپاره انتظار ايستلي وو حاضر نشول چې وروسته له يونيم کال نه په انګلستان کې بيرته کابل ته ولاړ شي او همصنفيان ېې چې ځلورم ټولګي ته کامياب شوي وو، دوي له اول صنف نه په کومه فاکولته کې هلته شروع کړي وای.  مصداق او تڼيوال په لندن کې له زياتو اقتصادي او د ويزې د تجديد له مشکلاتو سره مخامخ شول چې بلاخره تڼيوال تصميم ونيو چې د (جي، سي، اي) د دورې له تکميل نه وروسته وطن ته ستون شي او مصداق په لندن پوهنتون کې ، تعليم او تربيه لپاره، د يوه انګليسي بورس د ګټلو نه وروسته دوام ورکړ.  د تعليم او تربيه له فراغت نه وروسته هغه دوه کاله د لندن په ښونځيو کې درس ورکړ او بيرته د لندن بوهنتون (ال ، اس، اي) کې د وګړپوهنې په څانګه کې په زده کړه پيل وکړ.  مصداق د لندن ددې مشهور کالج نه په (هانرز) درجه ليسانس واخيست او ماسترې لپاره په اکسفورد، د لندن د اسياېې او افريقايي څيړنو کالج او ساسکس پوهنتون کې قبول شو.  له دې ټولو نه مصداق د ساسکس پوهنتون په دې خوښ کړ چې د پروفيسر (براين سټريټ) چې په ايران او افغانستان کې څيړنې کړې وې د هغه تررهنماې لاندې څيړنه وکړي .
+په کابل کې د مرحوم علي احمد خان د پوهنې وزير پر ځاې يو څوک چې په سختي او سوګتي کې ېې د پوهنې په وزارت کې شهرت درلود د ډاکټر انس په نوم د پوهنې وزير شو او هغه په انګلستان او يو شمير نورو محصلينو بورسونه په المان، فرانسه او بلجيم کې چې د پوهنې وزارت لخوا ېې ګټلي وو بيرته ور څخه واخيست او هغو ته ېې وويل چې د فاکولتې دورې لپاره بايد بيرته کابل ته ستانه شي.  نبي مصداق او هاشم تڼيوال دواړو چې يو کال ېې په کابل کې د انګلستان د بورس لپاره انتظار ايستلي وو حاضر نشول چې وروسته له يونيم کال نه په انګلستان کې بيرته کابل ته ولاړ شي او همصنفيان ېې چې ځلورم ټولګي ته کامياب شوي وو، دوي له اول صنف نه په کومه فاکولته کې هلته شروع کړي وای.  مصداق او تڼيوال په لندن کې له زياتو اقتصادي او د ويزې د تجديد له مشکلاتو سره مخامخ شول چې بلاخره تڼيوال تصميم ونيو چې د (جي، سي، اي) د دورې له تکميل نه وروسته وطن ته ستون شي او مصداق په لندن پوهنتون کې ، تعليم او تربيه لپاره، د يوه انګليسي بورس د ګټلو نه وروسته دوام ورکړ.  د تعليم او تربيه له فراغت نه وروسته هغه دوه کاله د لندن په ښونځيو کې درس ورکړ او بيرته د لندن بوهنتون (ال ، اس، اي) کې د [[وګړپوهنه|وګړپوهنې]] په څانګه کې په زده کړه پيل وکړ.  مصداق د لندن ددې مشهور کالج نه په (هانرز) درجه ليسانس واخيست او ماسترې لپاره په اکسفورد، د لندن د اسياېې او افريقايي څيړنو کالج او ساسکس پوهنتون کې قبول شو.  له دې ټولو نه مصداق د ساسکس پوهنتون په دې خوښ کړ چې د پروفيسر (براين سټريټ) چې په ايران او افغانستان کې څيړنې کړې وې د هغه تررهنماې لاندې څيړنه وکړي .
 
 مصداق د ماسټرې دوره په شپږو مياشتو کې سرته ورسوله او پوهنتون د هغه د ماسټری تيسز په خپل کتابتون کې، د يواځيني ماسټرې د تيسز په حيث د (ام، فيل او دکتورې) د تيسزونو تر څنګ ساتلی دی او هم هغه ته د برطانيې (د سوشل ساينس ريسرچ) د علمي ادارې لخوا د درو کالو لپاره د دکتورا د زده کړې د تماميدو له پاره يو بل بورس ورکړ شو. 
 
