--- a/نبي_مصداق.mw
+++ b/نبي_مصداق.mw
@@ -25,6 +25,10 @@
 په افغانستان کې د امريکې په مداخلې سره پښتو ژبې زده کړې لپاره ليول تيا پيدا شوی چې مصداق هم د دې ليوالتيا نه (جې په تاريخ کې د پښتو د پرمختګ لپاره داسې نړۍ واله توجه بې سارې ښکاري) په استفادې سره يو لړ د پښتو اروپايي او امريکايي ژب پوهانو تربيه کړي اوهم  ېې د پښتو د زده کړې درسونه او کتابونه د انټرنټ لپاره ليکلي او ليکي.  په دې لړ کې مصداق د پښتو نه په انګليسي ژبه يوه لمړۍ جامع ډکشنري چې 40 زرولغتو نه اوښتي ده ليکلې چې اوس تر چاپ لاندې ده.
 
 == سرچينې ==
+*نبي مصداق - افغانستان: سياسي کمزوري او خارجي مداخلت ISBN 978-0415470247
+*فيلډز، رونا ام. - شهادت:د ځان قربانولو ساپوهنه، روحانيت او سياست ISBN 978-0275979935
+*مالې وېليم - د افغانستان جګړې ISBN 978-0333802915
+*ريس، رسول بخش - بې ګټياليو جګړه: د سړې جګړې وروسته د افغانستان نامطمينه بدلون ISBN 978-0195775358
 
 == باندنۍ تړنې ==
 
