--- a/نبي_مصداق.mw
+++ b/نبي_مصداق.mw
@@ -17,6 +17,7 @@
 افغانستان ته  د روسانو د لښکرو په راتګ سره مصداق خپله د ډاکټرې زده کړه و ځنډوله ترڅو د ژورنالست په صفت خپل وطن او خلکو ته د خدمت مصدر وګرزي.  نبي مصداق وايي چې هغه د ډيرو کمو محصلينو نه په اروپا کې وو چې خپل درس ېې خپلو خلکو ته د خدمت لپاره پرېښود او هم په دې عقيده وو چې افغانان به هيڅکله هم د روسانو موجوديت په خپل ملک کې و نه زغمي او ډير ژر به له افغانستان نه وشړل شي.
 
 == دندې ==
+[[Image:NabiMisdaq.jpg|thumb|280px|ډاکټر نبي مصداق]]
 نبي مصداق د کمونستانو په دوره کې (بي، بي، سي) ته د کابل او روسانو خپرونې د افغانستان په باب اوريدلې او د نورو راديو ګانو تر څنګ ېې په انګليسي ژبه د (بي، بي، سي) د هر ورځينيو راپورونو لپاره ژباړلې. د افغانستان لپاره د کابل راديو او شوروي نشرات له ماسکو او تاجکستان نه مهم په دې وو چې له افغانستان نه ټول خارجي خبريالان ايستل شوي وو او د لويديخ په سفارتونو کې هم يواځې دوه با درې تنه به پاتي وو او نړۍ نه پوهيده چې افغانستان کې د کمونستانو د راتګ په دوره کې څه پيښيدل.  له نبي مصداق نه، وروسته له دؤ ويشتو مياشتو نه (بي، بي، سي) غوښتنه وکړه چې په لندن کې له (بوش هوس) نه چې د خارجي خپرونو مرکز دی، د پښتو ژبې خبرونې پيل کړي.   (بي، بي، سي) بلاخره  په اګست 1982 کې په پښتو ژبه چې کالونه ېې پاکستان مخالفت کاوه، پښتو خپرونه بيل کړه او مصداق ېې د لمړی ورځې نه بنسټ کيښود.  مصداق وروسته له تقريبا  شل کاله کار نه په (بي، بي، سي) کې بيرته پوهنتون ته ولاړ چې هغه ځنډمن شوې دوکتورې باندې له سره څېړنه پيل کړي. د زده کړې دا دوره هغه په خپل مصرف (د وګړپوهنې) په څانګه کې بشپړ کړه او د ميرمنې له فاميل سره د خپلو دو ځامنوسره واشنګتن ته په 2001 کې وکوچيد. 
 
 == د ليکوالۍ ډګر ==
